# workflow

./: .dockerignore  .env.example  .env.monitoring.example  .env.production.example  .eslintrc-wildcard-prevention.json  .gitignore  .prettierrc  .secret-scanner.config.json  CHANGELOG.md  CLAUDE.md  COLAB.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  OAUTH_TS_VERIFICATION_REPORT.md  QUALITY_STATS.json  README.md  RESTRUCTURING_PLAN.md  RESTRUCTURING_PROGRESS.md  SERVICE_FIXES_APPLIED.md  TEMPLATE_SPLIT_REPORT.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.html  lighthouserc.json  nginx.conf  openapi.yaml  package-lock.json  package.json  playwright.config.ts  postcss.config.js  swagger.json  tailwind.config.js  tsconfig.app.json  tsconfig.backend.json  tsconfig.build.json  (+4 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md
.husky/: pre-commit  pre-push
_archive/: package-lock.json.backup-deps-update  package-lock.json.backup-vite-fix  package.json.backup-deps-update  package.json.backup-vite-fix
_archive/root_modules/desktop/tauri/: Cargo.toml  tauri.conf.json
_archive/root_modules/desktop/tauri/src/: main.rs
benchmarks/: execution-baseline.ts
cli/: index.ts
config/: auto-corrections.json  validation-loop.json
docker/: Dockerfile.scalability  docker-compose.scalability.yml
docs/: ADVANCED_DEPLOYMENT_OPTIONS.md  API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTING.md  CONVERSATIONAL_INTERFACE_GUIDE.md  DATABASE_QUERY_OPTIMIZATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  (+23 more)
(+4557 files in other folders)
