[package]
name = "workflow-desktop"
version = "1.0.0"
description = "Workflow Automation Platform - Desktop Application"
authors = ["Workflow Team"]
license = "MIT"
repository = "https://github.com/workflow/desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "api-all",
  "devtools",
  "system-tray",
  "updater",
  "window-all",
  "protocol-all",
  "process-all",
  "notification-all",
  "global-shortcut-all",
  "clipboard-all",
  "dialog-all",
  "fs-all",
  "http-all",
  "os-all",
  "path-all",
  "shell-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
websocket = "0.27"
native-dialog = "0.7"
keyring = "2.3"
machine-uid = "0.5"
sysinfo = "0.30"
directories = "5.0"
notify = "6.1"
parking_lot = "0.12"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true